# travel-assistant

./: .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.test  Improvement Opportunities.md  PITCH.md  README.md  makefile  pyproject.toml  requirements-dev.txt  run-docker-test.sh  spec.md  todo.md
deploy/: backend.tf  bucket.tf  cloud_run.tf  locals.tf  provider.tf  variables.tf
distroless-test/: Dockerfile.distroless  Dockerfile.test
fuel-dashboard/: .dockerignore  Dockerfile  Dockerfile.e2e  Dockerfile.test  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json
fuel-ingestor/: .dockerignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements.txt
fuel-ingestor/app/: aggregator.py  backfill.py  brand_competitiveness.py  brand_utils.py  local_run.py  main.py  shared.py  spain_fuel_price.py
fuel-ingestor/app/aggregator/: backfill.py  brand_competitiveness.py  brand_utils.py  local_run.py  main.py  shared.py
fuel-ingestor/app/aggregator/pipeline/: base.py  gcs.py  runner.py
fuel-ingestor/app/aggregator/pipelines/: brand_stats.py  day_of_week_stats.py  ingestion_stats.py  province_stats.py  zip_code_stats.py
fuel-ingestor/app/aggregator/reports/: brand_comparison.py  brand_win_rate.py  config.py
fuel-ingestor/app/ingestor/: entity.py  local_run.py  main.py  spain_fuel_price.py
fuel-ingestor/app/pipeline/: gcs.py  runner.py
fuel-ingestor/app/pipelines/: brand_stats.py  day_of_week_stats.py  ingestion_stats.py  province_stats.py  zip_code_stats.py
fuel-ingestor/app/reports/: brand_comparison.py  brand_win_rate.py
fuel-ingestor/tests/: fixture.py  test_aggregator.py  test_backfill.py  test_brand_aggregator.py  test_brand_comparison.py  test_brand_competitiveness.py  test_brand_utils.py  test_brand_win_rate.py  test_main.py  test_pipeline_runner.py  test_reports_config.py  test_spain_fuel_price.py
infra/: README.md  backend.tf  bucket.tf  dashboard.tf  ingestor.tf  locals.tf  outputs.tf  provider.tf  varibles.tf
spain-fuel-fetcher/: Dockerfile.test  SCHEMA.md  pyproject.toml
spain-fuel-fetcher/src/spain_fuel_api/: __init__.py  client.py  constants.py  fetch.py  schema.py  transform.py  validate.py
spain-fuel-fetcher/tests/: fixture.py  test_fetch.py  test_transform.py  test_validate.py
(+154 files in other folders)
