[project]
name = "spain-fuel-fetcher"
version = "0.1.0"
description = "Fetch, validate and transform Spain government fuel-price API data"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.3",
    "pytz==2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spain_fuel_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest"]
